--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.cloud.stream.kafka.binder.brokers=localhost
 # replication factor, max value is how many brokers. in this case only 1.
 spring.cloud.stream.kafka.binder.replication-factor=1
 
+# minimum broker partition
+spring.cloud.stream.kafka.binder.minPartitionCount=1
+
 # zookeeper node
 spring.cloud.stream.kafka.binder.zk-nodes=localhost
 
