--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 ##########################################################################################################################
 
 # kafka broker
-spring.cloud.stream.kafka.binder.brokers=localhost
+spring.cloud.stream.kafka.binder.brokers=172.20.20.10,172.20.20.20,172.20.20.30
 
 # replication factor, max value is how many brokers. in this case only 1.
 spring.cloud.stream.kafka.binder.replication-factor=1
@@ -12,7 +12,7 @@ spring.cloud.stream.kafka.binder.replication-factor=1
 spring.cloud.stream.kafka.binder.minPartitionCount=1
 
 # zookeeper node
-spring.cloud.stream.kafka.binder.zk-nodes=localhost
+spring.cloud.stream.kafka.binder.zk-nodes=172.20.20.10,172.20.20.20,172.20.20.30
 
 # for spring sleuth and zipkins. you can add custom header here
 spring.cloud.stream.kafka.binder.headers=spanId,spanSampled,spanProcessId,spanParentSpanId,spanTraceId,spanName,spanFlags,counterHeader
