add client-id and consumer-group

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@
 spring.cloud.stream.kafka.binder.brokers=172.20.20.10,172.20.20.20,172.20.20.30
 
 # replication factor, max value is how many brokers. in this case only 1.
-spring.cloud.stream.kafka.binder.replication-factor=1
+spring.cloud.stream.kafka.binder.replication-factor=3
 
 # minimum broker partition
-spring.cloud.stream.kafka.binder.minPartitionCount=1
+spring.cloud.stream.kafka.binder.minPartitionCount=3
 
 # zookeeper node
 spring.cloud.stream.kafka.binder.zk-nodes=172.20.20.10,172.20.20.20,172.20.20.30
@@ -28,7 +28,7 @@ spring.cloud.stream.kafka.bindings.counterChannel.producer.sync=true
 spring.cloud.stream.kafka.bindings.counterChannel.producer.configuration.request.timeout.ms=5000
 
 ##########################################################################################################################
-# Configure stream bindings for SOURCE
+# Configure stream bindings for SOURCE (PRODUCER)
 ##########################################################################################################################
 
 # set topic destination
@@ -38,7 +38,7 @@ spring.cloud.stream.bindings.counterChannel.destination=counter.t
 spring.cloud.stream.bindings.counterChannel.content-type=application/json
 
 ##########################################################################################################################
-# Configure stream bindings for SINK
+# Configure stream bindings for SINK (CONSUMER)
 ##########################################################################################################################
 
 # set topic to listen
@@ -46,3 +46,9 @@ spring.cloud.stream.bindings.counterSinkChannel.destination=counter.t
 
 # set content type
 spring.cloud.stream.bindings.counterSinkChannel.content-type=application/json
+
+# set consumer group
+spring.cloud.stream.bindings.counterSinkChannel.group=counter-consumer
+
+# set client-id
+spring.cloud.stream.kafka.bindings.counterSinkChannel.consumer.configuration.client.id=counter-1
